--- a/requirements.txt
+++ b/requirements.txt
@@ -1,266 +1,10 @@
-absl-py==2.1.0
-altgraph==0.17.4
-annotated-types==0.7.0
-anyio==4.4.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==24.2.0
-audioread==3.0.1
-babel==2.16.0
-beautifulsoup4==4.12.3
-binaryornot==0.4.4
-bleach==6.1.0
-blinker==1.9.0
-Brotli==1.1.0
-buildozer==1.5.0
-Cartopy==0.24.1
-certifi==2024.8.30
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.3.2
-clarabel==0.9.0
-click==8.1.7
-cmdstanpy==1.2.5
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.0
-cookiecutter==2.6.0
-cramjam==2.10.0
-cssselect2==0.8.0
-cvxpy==1.5.3
-cycler==0.12.1
-Cython==3.0.11
-debugpy==1.8.5
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.9
-docutils==0.21.2
-ecos==2.0.14
-et_xmlfile==2.0.0
-executing==2.1.0
-fastapi==0.115.5
-fastjsonschema==2.20.0
-fastparquet==2024.11.0
-filelock==3.15.4
-finance-datareader==0.9.94
-Flask==3.1.0
-flatbuffers==24.3.25
-flet==0.25.2
-flet-cli==0.25.2
-flet-core==0.24.1
-flet-desktop==0.25.2
-flet-runtime==0.24.1
-flet-web==0.25.2
-fonttools==4.53.1
+Flask==3.1.1
 fpdf2==2.8.2
-fqdn==1.5.1
-frozendict==2.4.6
-fsspec==2024.6.1
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.66.1
-h11==0.14.0
-h5py==3.11.0
-holidays==0.65
-html5lib==1.1
-httpcore==1.0.5
-httptools==0.6.4
-httpx==0.27.2
-idna==3.8
-imbalanced-learn==0.13.0
-importlib_resources==6.5.2
-intel-openmp==2021.4.0
-investpy==1.0.8
-ipykernel==6.29.5
-ipython==8.27.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
+imbalanced_learn==0.13.0
 joblib==1.4.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-kaleido==0.2.1
-keras==3.5.0
-kiwisolver==1.4.5
-lazy_loader==0.4
-libclang==18.1.1
-librosa==0.10.2.post1
-llvmlite==0.43.0
-lxml==4.9.4
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.0.2
-mkl==2021.4.0
-ml-dtypes==0.4.0
-mpl-finance==0.10.1
-mpmath==1.3.0
-msgpack==1.1.0
-multitasking==0.0.11
-namex==0.0.8
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.3
-notebook==7.2.2
-notebook_shim==0.2.4
-npTDMS==1.9.0
-numba==0.60.0
 numpy==1.25.0
-oauthlib==3.2.2
-openpyxl==3.1.5
-opt-einsum==3.3.0
-optree==0.12.1
-osqp==0.6.7.post1
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==23.2
-pandas==2.2.2
-pandas-datareader==0.10.0
-pandas-ta==0.3.14b0
-pandocfilters==1.5.1
-parso==0.8.4
-patsy==0.5.6
-peewee==3.16.2
-pefile==2023.2.7
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.3.1
-plotly==5.24.1
-pooch==1.8.2
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-prophet==1.1.6
-protobuf==4.25.4
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==19.0.1
-pycparser==2.22
-pydantic==2.10.1
-pydantic_core==2.27.1
-pydyf==0.11.0
-Pygments==2.18.0
-pyinstaller==6.11.1
-pyinstaller-hooks-contrib==2024.10
-pyod==2.0.2
-pyparsing==3.1.4
-pyphen==0.17.2
-pypiwin32==223
-pypng==0.20220715.0
-pyproj==3.7.1
-pyreadstat==1.2.8
-pyshp==2.3.1
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-python-slugify==8.0.4
-pytrends==4.9.2
-pywin32==306
-pywin32-ctypes==0.2.3
-pywinpty==2.0.13
-PyYAML==6.0.2
-pyzmq==26.2.0
-qdldl==0.1.7.post4
-qrcode==7.4.2
-referencing==0.35.1
-repath==0.9.0
-reportlab==4.3.1
-requests==2.32.3
-requests-file==2.1.0
-requests-futures==1.0.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.8.0
-rpds-py==0.20.0
-scikit-learn==1.5.1
-scipy==1.14.1
-scs==3.2.7
-selenium==4.26.1
-Send2Trash==1.8.3
-sh==2.1.0
-shapely==2.0.7
-six==1.16.0
-sklearn-compat==0.1.3
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soundfile==0.12.1
-soupsieve==2.6
-soxr==0.5.0.post1
-stack-data==0.6.3
-stanio==0.5.1
-starlette==0.41.3
-statsmodels==0.14.4
-sympy==1.13.2
-tbb==2021.13.1
-tenacity==9.0.0
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-intel==2.17.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-terminado==0.18.1
-text-unidecode==1.3
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-toml==0.10.2
-torch==2.3.1
-torchaudio==2.3.1
-torchsummary==1.5.1
-torchvision==0.18.1
-tornado==6.4.1
-tqdm==4.67.1
-traitlets==5.14.3
-trio==0.27.0
-trio-websocket==0.11.1
-types-python-dateutil==2.9.0.20240906
-typing_extensions==4.12.2
-tzdata==2024.1
-Unidecode==1.3.8
-uri-template==1.3.0
-urllib3==2.2.2
-uvicorn==0.32.1
-virtualenv==20.28.0
-watchdog==4.0.2
-watchfiles==0.24.0
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==14.1
-Werkzeug==3.1.3
-widgetsnbextension==4.0.13
-wordcloud==1.9.4
-wrapt==1.16.0
-wsproto==1.2.0
-xgboost==3.0.0
-yahooquery==2.3.7
-yfinance==0.2.54
-zopfli==0.2.3.post1
+pandas==2.2.3
+scikit_learn==1.6.1
+scipy==1.15.3
+xgboost==3.0.1
+gunicorn==22.0.0
